@@ -1,9 +1,12 @@
 package data.screens.mainMenu
 
+import data.calendar.FestiveDay
 import data.calendar.Season
 import kotlinx.datetime.DayOfWeek
 
 data class MainMenuUIState(
-    val dayName : DayOfWeek = DayOfWeek.MONDAY,
-    val backgroundSeason: Season = Season.WINTER
+    val dayOfWeek : DayOfWeek = DayOfWeek.MONDAY,
+    val festiveDay: FestiveDay? = null,
+    val dayOfSeason: Int = 0,
+    val currentSeason: Season = Season.WINTER
 )
