@@ -14,7 +14,6 @@ import androidx.compose.ui.draw.paint
 import androidx.compose.ui.graphics.Color
 import androidx.compose.ui.layout.ContentScale
 import androidx.compose.ui.text.intl.Locale
-import androidx.compose.ui.text.intl.LocaleList
 import androidx.compose.ui.text.style.TextAlign
 import androidx.compose.ui.unit.dp
 import androidx.compose.ui.unit.sp
@@ -23,6 +22,7 @@ import org.jetbrains.compose.resources.ExperimentalResourceApi
 import org.jetbrains.compose.resources.painterResource
 import org.jetbrains.compose.resources.stringArrayResource
 import presentation.resourceComposition.toDrawableResource
+import presentation.resourceComposition.toResourceString
 import presentation.reusableUi.ImageButton
 import presentation.reusableUi.OutlinedText
 import zealotry.composeapp.generated.resources.Res
@@ -46,17 +46,17 @@ fun MainMenuScreen(
 
     Box(modifier = with(Modifier) {
         fillMaxSize().paint(
-            painterResource(uiState.backgroundSeason.toDrawableResource()),
+            painterResource(uiState.currentSeason.toDrawableResource()),
             contentScale = ContentScale.Crop
         )
     })
-    val a = Locale.current.language
-    val b = LocaleList.current.localeList.toString()
 
-
-    val testInt: Int = 12
-    val pluralForm = getLocale(Locale.current.language).getOrdinal(testInt)
+    val dayName = uiState.festiveDay?.toResourceString() ?: uiState.dayOfWeek.toResourceString()
+    val pluralForm = getLocale(Locale.current.language).getOrdinal(uiState.dayOfSeason)
     val suffix = stringArrayResource(Res.string.ordinal)[pluralForm.ordinal]
+    val ordinalDayOfSeason = "${uiState.dayOfSeason}${suffix}"
+    val tempTitle = "${dayName}, ${ordinalDayOfSeason} day of ${uiState.currentSeason.toResourceString()}"
+
     Column(
         Modifier.fillMaxSize(),
         horizontalAlignment = Alignment.CenterHorizontally
@@ -64,10 +64,7 @@ fun MainMenuScreen(
         Box(Modifier.padding(20.dp).weight(1f)) {
             OutlinedText(
                 //TODO: tidy up this title
-                text = testInt.toString() + suffix,
-//                text= a+stringArrayResource(Res.string.ordinal)[2],
-//                text = "1 2 3 4 8 10 11 12 13 14 20 21 22 23 24 100",
-                //text = "${calendar.dayOfWeek.toResourceString()}, ${calendar.seasonInfo.dayOfTheSeason} of ${calendar.seasonInfo.currentSeason.toResourceString()}",
+                text = tempTitle,
                 textBorderColour = Color(0xFFFFFFFF),
                 modifier = Modifier.padding(20.dp),
                 fontSize = 24.sp,
